--- a/movies.html
+++ b/movies.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="srcs/css/moviesStyle.css">
-  <title>ResíliaFlix</title>
+  <title>ResiliaFlix</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
       <a class="navbar-brand nav-text" href="index.htm">
         <img src="srcs/assets/logo2.PNG" width="35" height="35" class="d-inline-block align-center" alt="ResiliaFlix"
           loading="lazy">
-        Resíliaflix
+        Resiliaflix
       </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -747,7 +747,7 @@
         height="30"></a>
   </div>
   <br><br>
-  <p>Resília LTDA &#169</p>
+  <p>Resilia LTDA &#169</p>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
