--- a/newUser.html
+++ b/newUser.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="srcs/css/newUserStyle.css">
-    <title>Sign Up - ResíliaFlix</title>
+    <title>Sign Up - ResiliaFlix</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
  <nav class="navbar navbar-expand-lg fixed-top navbar-light">
     <a class="navbar-brand nav-text" href="index.htm">
       <img src="srcs/assets/logo2.PNG" width="35" height="35" class="d-inline-block align-center" alt="ResiliaFlix" loading="lazy">
-      Resíliaflix
+      Resiliaflix
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -199,7 +199,7 @@
         <a href="https://instagram.com/resiliaflix"><img src="srcs/assets/instagram.png" width="30" height="30"></a>
     </div>
     <br><br>
-    <p>Resília LTDA &#169</p>
+    <p>Resilia LTDA &#169</p>
 </footer>
 
 
