--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="srcs/css/404Style.css">
-    <title>404 - ResiliaFlix</title>
+    <title>404 - Resiliaflix</title>
 </head>
 
 <body>
