--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
      <nav class="navbar navbar-expand-lg fixed-top navbar-light">
         <a class="navbar-brand nav-text" href="index.htm">
           <img src="srcs/assets/logo2.PNG" width="35" height="35" class="d-inline-block align-center" alt="ResiliaFlix" loading="lazy">
-          ResiliaFlix
+          Resiliaflix
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
