--- a/index.htm
+++ b/index.htm
@@ -380,7 +380,7 @@
           <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
             <div class="card-body fQcard">
               Resiliaflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning
-              Netflix originals, and more. Watch as much as you want, anytime you want.
+              Resiliaflix, and more. Watch as much as you want, anytime you want.
             </div>
           </div>
         </div>
