--- a/index.htm
+++ b/index.htm
@@ -270,24 +270,23 @@
         <div class="card card-sizing mb-5 col-md-4 col-12 p-0">
           <img src="srcs/assets/film.jpg" class="card-img-top" alt="filmroll">
           <div class="card-body">
-            <h4 class="card-title">Enjoy on your TV.</h4>
-            <p class="card-text">Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.
+            <h4 class="card-title">Enjoy with your friends.</h4>
+            <p class="card-text">Enter exclusive rooms together, on your Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.
             </p>
           </div>
         </div>
         <div class="card card-sizing mb-5 col-md-4 col-12 p-0">
           <img src="srcs/assets/film.jpg" class="card-img-top" alt="filmroll">
           <div class="card-body">
-            <h4 class="card-title">Download your shows to watch offline.</h4>
-            <p class="card-text">Save your favorites easily and always have something to watch.</p>
+            <h4 class="card-title">Download your movies to watch offline.</h4>
+            <p class="card-text">Save your favorites easily and always have something to watch. Anytime, anywhere.</p>
           </div>
         </div>
         <div class="card card-sizing mb-5 col-md-4 col-12 p-0">
           <img src="srcs/assets/film.jpg" class="card-img-top" alt="filmroll">
           <div class="card-body">
-            <h4 class="card-title">Watch everywhere.</h4>
-            <p class="card-text">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without
-              paying more.</p>
+            <h4 class="card-title">Social Streaming network</h4>
+            <p class="card-text">Share, discuss, review and meet new people. Everything in the same place.</p>
           </div>
         </div>
       </div>
