--- a/loggedIndex.htm
+++ b/loggedIndex.htm
@@ -72,6 +72,10 @@
                           Your profile
                         </a> 
                         <a class="dropdown-item pl-2" href="#">
+                          <img src="srcs/assets/coracao.png" width="15" height="15">
+                          Your friends
+                        </a> 
+                        <a class="dropdown-item pl-2" href="#">
                           <img src="srcs/assets/star.png" width="15" height="15">
                           Your membership
                         </a>  
@@ -127,42 +131,42 @@
           <div class="recArea p-3">
             <div class="card-deck">
               <div class="card bg-dark text-white">
-                <img src="srcs/assets/ResiliaPoster.jpg" class="card-img" alt="...">
+                <img src="srcs/assets/hpPoster.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay movieTitle">
                 <p class="">Title</p>
                 </div>
               </div>
 
               <div class="card bg-dark text-white">
-                <img src="srcs/assets/ResiliaPoster.jpg" class="card-img" alt="...">
+                <img src="srcs/assets/jokerPoster.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay movieTitle">
                 <p class="">Title</p>
                 </div>
               </div>
 
               <div class="card bg-dark text-white">
-                <img src="srcs/assets/ResiliaPoster.jpg" class="card-img" alt="...">
+                <img src="srcs/assets/seemePoster.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay movieTitle">
                 <p class="">Title</p>
                 </div>
               </div>
             
               <div class="card bg-dark text-white">
-                <img src="srcs/assets/ResiliaPoster.jpg" class="card-img" alt="...">
+                <img src="srcs/assets/inceptionPoster.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay movieTitle">
                 <p class="">Title</p>
                 </div>
               </div>
 
               <div class="card bg-dark text-white">
-                <img src="srcs/assets/ResiliaPoster.jpg" class="card-img" alt="...">
+                <img src="srcs/assets/lotrPoster.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay movieTitle">
                 <p class="">Title</p>
                 </div>
               </div>
 
               <div class="card bg-dark text-white">
-                <img src="srcs/assets/ResiliaPoster.jpg" class="card-img" alt="...">
+                <img src="srcs/assets/trumanPoster.jpg" class="card-img" alt="...">
                 <div class="card-img-overlay movieTitle">
                 <p class="">Title</p>
                 </div>
