--- a/movies.html
+++ b/movies.html
@@ -647,7 +647,7 @@
               </div>
               <div class="carousel-item">
                 <a href="#" id="carousel-item" data-toggle="modal" data-target="#infoMovies">
-                  <img src="srcs/assets/splitPoster.jpg" class="d-inline-block img-sizing" >
+                  <img src="srcs/assets/columbusPoster.jpg" class="d-inline-block img-sizing" >
                 </a>
               </div>
               <div class="carousel-item">
