--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="srcs/css/indexStyle.css">
-  <title>Resíliaflix</title>
+  <title>Resiliaflix</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
       <a class="navbar-brand nav-text" href="index.htm">
         <img src="srcs/assets/logo2.PNG" width="35" height="35" class="d-inline-block align-center" alt="ResiliaFlix"
           loading="lazy">
-        Resíliaflix
+        Resiliaflix
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -402,7 +402,7 @@
 
   </div>
   <br><br>
-  <p>Resília LTDA &#169</p>
+  <p>Resilia LTDA &#169</p>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
